--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simon Says</title>
 </head>
 <body>
-    
+    <div id="numbers"></div>
     <!-- Script -->
     <script type="text/javascript" src="js/script.js"></script>
 </body>
